# checkout-assistant

./: .env.example  .env.save  .gitignore  CLAUDE.md  HANDOFF.md  Procfile  README.md  SUMMARY.md  TESTING_CHECKLIST.md  amplify.yml  api.py  card_lookup.py  gunicorn.conf.py  gyftr_full_database.xlsx  gyftr_scrape_results.xlsx  gyftr_vouchers.csv  gyftr_vouchers_v2.csv  main.py  pipeline.py  pyproject.toml  render.yaml  requirements.txt  response.json  restriction_audit.txt  test_results.csv  whatsapp_message_templates.html  whatsapp_ux_research_prompt.md
data/: cashback_cards.json  gyftr_master.json
db/: cache.py  card_lookup.py  gyftr_full_scrape_progress.json  gyftr_master.json  gyftr_stacking_rules.json  gyftr_vouchers.json  models.py  queries.py  voucher_lookup.py
engine/: category_classifier.py  matcher.py
extractor/: discovery.py  shopping.py  zyte_client.py
react/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json
react/src/: App.jsx  (+2 more)
scripts/: add_how_to_redeem_short.py  add_how_to_redeem_short_rulebased.py  batch_test_5.py  build_full_spreadsheet.py  build_master.py  build_spreadsheet.py  debug_archies2.py  debug_last3.py  gyftr_to_csv.py  gyftr_to_csv_v2.py  parse_stacking_rules.py  scrape_all_gyftr.py  scrape_gyftr.py  test_playwright_scrape.py  whatsapp_dev.sh
src/: application.py  cache.py  category_classifier.py  config.py  constants.py
templates/: index.html
tests/: capture_fixtures.py  check_picker.py
v2/: routes.py  searchapi.py
whatsapp/: classifier.py  formatter.py  session_store.py  webhook.py
(+92 files in other folders)
