[project]
name = "checkout-assistant"
version = "0.1.0"
description = "Price comparison engine for Indian e-commerce"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "requests>=2.34.2",
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]
