[project]
name = "checkout-assistant"
version = "0.2.0"
description = "Dealo — pre-checkout purchase optimization engine for Indian e-commerce"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

# Dependencies used only by the offline Gyftr scrape scripts (scripts/), not the
# runtime service. Install with:  pip install -e ".[scripts]"
[project.optional-dependencies]
scripts = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "requests>=2.34.2",
]

[tool.setuptools.packages.find]
include = ["src*"]
